Login ve Register ekranları yapıldı.

--- a/ECommerce/ECommerce.WEB/Views/Home/Register.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/Register.cshtml
@@ -14,35 +14,45 @@
                     {
                         <div class="form-row">
                             <div class="col-md-6">
-                                <label for="email">Adınız</label>
+                                @Html.LabelFor(s => s.FirstName, new { @class = "col-form-label" })
                                 @Html.TextBoxFor(s => s.FirstName, new { @class = "form-control", required = "" })
                                 @Html.ValidationMessageFor(c => c.FirstName)
 
                             </div>
                             <div class="col-md-6">
-                                <label for="email">Soyadınız</label>
+                                @Html.LabelFor(s => s.LastName, new { @class = "col-form-label" })
                                 @Html.TextBoxFor(s => s.LastName, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(c => c.LastName)
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="col-md-6">
-                                <label for="email">Mail Adresiniz</label>
+                                @Html.LabelFor(s => s.Email, new { @class = "col-form-label" })
                                 @Html.TextBoxFor(s => s.Email, new { @class = "form-control", type = "email" })
                                 @Html.ValidationMessageFor(c => c.Email)
                             </div>
                             <div class="col-md-3">
-                                <label for="review">Şifre</label>
+                                @Html.LabelFor(s => s.Password, new { @class = "col-form-label" })
                                 @Html.PasswordFor(s => s.Password, new { @class = "form-control", })
                                 @Html.ValidationMessageFor(c => c.Password)
 
                             </div>
                             <div class="col-md-3">
-                                <label for="review">Şifre Tekrar</label>
+                                @Html.LabelFor(s => s.RePassword, new { @class = "col-form-label" })
                                 @Html.PasswordFor(s => s.RePassword, new { @class = "form-control", })
                                 @Html.ValidationMessageFor(c => c.RePassword)
                             </div>
-                            <input type="submit" class="btn btn-solid" value="Kaydol" />
+                            <div class="col-md-3">
+                                @Html.LabelFor(s => s.BirthDate, new { @class = "col-form-label" })
+                                @Html.TextBoxFor(s => s.BirthDate, "{0:dd.MM.yyyy}", new { @class = "form-control datepicker", })
+                                @Html.ValidationMessageFor(c => c.BirthDate)
+                            </div>
+                            <div class="col-md-3">
+                                @Html.LabelFor(s=> s.IsWantNotification, new { @class = "col-form-label" })
+                                @Html.CheckBoxFor(s => s.IsWantNotification, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(c => c.IsWantNotification)
+                            </div>
+                            <input type="submit" class="btn btn-solid" value="Kaydol">
                         </div>
                     }
                 </div>
@@ -51,30 +61,12 @@
     </div>
 </section>
 
-@*<div id='app'>
-        <div>
-            <h1>Count is: {{ count }}</h1>
-            <br>
-            <p>
-                <button v-on:click="count++">Increment Count!</button>
-            </p>
-            <br>
-        </div>
-    </div>*@
-<!--Section ends-->
+
 @section Scripts
 {
 
-
-    @*<script src="https://unpkg.com/vue/dist/vue.js"></script>*@
     <script>
-        //var vueApp = new Vue({
-        //    el: '#app',
-        //    data: {
-        //        count: 0
-        //    }
-        //})Model
-
+      
         Jform('#RegisterForm');
 
 
