Layout  menüsü logine göre bind edildi.

--- a/ECommerce/ECommerce.WEB/Views/Home/Login.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/Login.cshtml
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h3 class="title">Login</h3>
+                    <h3 class="title">Üye Girişi</h3>
                     <div class="theme-card">
                         <form class="theme-form">
                             <div class="form-group">
@@ -48,10 +48,10 @@
                 </div>
                 <div class="col-lg-6 right-login">
                     <h3 class="title">Yeni Üye</h3>
-                    <div class="theme-card authentication-right">
+                    <div class="theme-card theme-form ">
                         <h6 class="title-font">Üye Ol</h6>
                         <p>Sign up for a free account at our store. Registration is quick and easy. It allows you to be able to order from our shop.
-                        To start shopping click register.</p><a href="@Url.Action("Register","Home")" class="btn btn-solid">Kayıt Ol</a>
+                        To start shopping click register.</p><a href="@Url.Action("Register","Home")" class="btn btn-solid">Üye Ol</a>
                     </div>
                 </div>
             </div>
