--- a/ECommerce/ECommerce.WEB/Views/Home/Register.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/Register.cshtml
@@ -10,7 +10,7 @@
             <div class="col-lg-12">
                 <h3 class="title pt-0">create account</h3>
                 <div class="theme-card">
-                    @using (Html.BeginForm("Register","Home",FormMethod.Post,new {@class="theme-form form-group", @id="RegisterForm" }))
+                    @using (Html.BeginForm("Register", "Home", FormMethod.Post, new { @class = "theme-form form-group", @id = "RegisterForm" }))
                     {
                         <div class="form-row">
                             <div class="col-md-6">
@@ -42,17 +42,36 @@
                                 @Html.PasswordFor(s => s.RePassword, new { @class = "form-control", })
                                 @Html.ValidationMessageFor(c => c.RePassword)
                             </div>
+                        </div>
+                        <div class="form-row">
                             <div class="col-md-3">
                                 @Html.LabelFor(s => s.BirthDate, new { @class = "col-form-label" })
                                 @Html.TextBoxFor(s => s.BirthDate, "{0:dd.MM.yyyy}", new { @class = "form-control datepicker", })
                                 @Html.ValidationMessageFor(c => c.BirthDate)
                             </div>
                             <div class="col-md-3">
-                                @Html.LabelFor(s=> s.IsWantNotification, new { @class = "col-form-label" })
+                                @Html.LabelFor(s => s.IsWantNotification, new { @class = "col-form-label" })
                                 @Html.CheckBoxFor(s => s.IsWantNotification, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(c => c.IsWantNotification)
                             </div>
-                            <input type="submit" class="btn btn-solid" value="Kaydol">
+                            <div class="col-md-6">
+                                @Html.LabelFor(s => s.ParameterGenderId, new { @class = "col-form-label" })
+                                <ul>
+                                    @foreach (var parameter in Model.ParameterGenderTypeList)
+                                    {
+                                        <li>
+                                            <div class="radio-option">
+                                                @Html.LabelForModel(parameter.Name, new { @class = "col-form-label", @for = parameter.Name })
+                                                @Html.RadioButtonFor(s => s.ParameterGenderId, parameter.Id, new { id = parameter.Name })
+                                                @Html.ValidationMessageFor(c => c.ParameterGenderId)
+                                            </div>
+                                        </li>
+                                    }
+                                </ul>
+                                <input type="submit" class="btn btn-solid" value="Kaydol">
+
+                            </div>
+
                         </div>
                     }
                 </div>
@@ -66,7 +85,7 @@
 {
 
     <script>
-      
+
         Jform('#RegisterForm');
 
 
