--- a/ECommerce/ECommerce.WEB/Views/Home/_Category.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/_Category.cshtml
@@ -6,18 +6,36 @@
 
 @section Scripts
 {
-
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <script>
-        var vueApp = new Vue({
-            el: '#app',
-            data: {
-                count: 0
-            }
-        })
+        new Vue({
 
+            el: "#CategoryApp",
+            data: {
+                firstName: "",
+                lastName: ""
+            },
+            methods: {
+                sendToServer: function () {
+
+                    axios({
+                        method: 'post',
+                        url: '/home/index',
+                        data: {
+                            "firstName": this.firstName,
+                            "lastName": this.lastName
+                        }
+                    }).then(function (response) {
+                        console.log(response);
+                    })
+                    .catch(function (error) {
+                        console.log(error);
+                    });
+                }
+            }
+        });
     </script>
 
 }
