Kullanıcı profili ve adres CRUD işlemleri yapıldı.

--- a/ECommerce/ECommerce.WEB/Views/Home/_UserInformation.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/_UserInformation.cshtml
@@ -68,7 +68,7 @@
                 <div class="wishlist icon-detail">
 
                     <h6 class="up-cls"><span>Hesabım</span></h6>
-                    <h6><a href="@Url.Action("Profile","User")">@appUser.FirstName</a></h6>
+                    <h6><a href="@Url.Action("UserProfile","AppUser")">@appUser.FirstName</a></h6>
                     <div class="show-div setting">
                         <h6>İşlemler</h6>
                         <ul>
