--- a/ECommerce/ECommerce.WEB/Views/Home/Register.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/Register.cshtml
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h3 class="title pt-0">create account</h3>
+                <h3 class="title pt-0">Hesap Oluştur</h3>
                 <div class="theme-card">
                     @using (Html.BeginForm("Register", "Home", FormMethod.Post, new { @class = "theme-form form-group", @id = "RegisterForm" }))
                     {
