--- a/ECommerce/ECommerce.WEB/Views/Address/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Address/Index.cshtml
@@ -13,18 +13,7 @@
                 <div class="account-sidebar"><a class="popup-btn">my account</a></div>
                 <div class="dashboard-left">
                     <div class="collection-mobile-back"><span class="filter-back"><i class="fa fa-angle-left" aria-hidden="true"></i> back</span></div>
-                    <div class="block-content">
-                        <ul>
-                            <li class="active"><a href="@Url.Action("Index","AppUser")">Kullanıcı Bilgilerim</a></li>
-                            <li><a href="@Url.Action("Index","Address")">Adres Bilgilerim</a></li>
-                            <li><a href="#">Siparişlerim</a></li>
-                            <li><a href="#">Beğendiklerim</a></li>
-                            <li><a href="#">İndirim Kuponlarım</a></li>
-                            <li><a href="#">Kayıtlı Kredi Kartlarım</a></li>
-                            <li><a href="#">Yardım</a></li>
-                            <li class="last"><a href="@Url.Action("Logout","Home")">Çıkış Yap</a></li>
-                        </ul>
-                    </div>
+                    @Html.Action("_MenuInfo", "AppUser")
                 </div>
             </div>
             <div class="col-lg-9">
