--- a/ECommerce/ECommerce.WEB/Views/Address/Insert.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Address/Insert.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Insert";
 }
 
-@using (Html.BeginForm("Insert", "Address", FormMethod.Post, new { @id = "InsertAdress" }))
+@using (Html.BeginForm("Insert", "Address", FormMethod.Post, new { @id = "InsertAddress" }))
 {
     @Html.Action("_ProfileInfo", "AppUser")
     <!-- section start -->
@@ -15,7 +15,7 @@
                     <div class="account-sidebar"><a class="popup-btn">my account</a></div>
                     <div class="dashboard-left">
                         <div class="collection-mobile-back"><span class="filter-back"><i class="fa fa-angle-left" aria-hidden="true"></i> back</span></div>
-                       @Html.Action("_MenuInfo", "AppUser")
+                        @Html.Action("_MenuInfo", "AppUser")
                     </div>
                 </div>
                 <div class="col-lg-9">
@@ -73,28 +73,35 @@
         </div>
     </section>
     <!-- section end -->
-  
+
 }
 
-<script type="text/javascript">
-    $(function () {
-        $('#txtphone').keydown(function (e) {
-            if (e.shiftKey || e.ctrlKey || e.altKey) {
-                e.preventDefault();
-            } else {
-                var key = e.keyCode;
-                if (!((key == 8) || (key == 46) || (key >= 35 && key <= 40) || (key >= 48 && key <= 57) || (key >= 96 && key <= 105))) {
-                    e.preventDefault();
-                }
-            }
-        });
-    });
-
-</script>
-<script src="~/Themes/assets/js/phone.js"></script>
+ 
 
 @section Scripts{
     <script>
+
+    $(document).ready(function () {
+        $("#CityId").change(function () {
+            //alert("Değişti");
+            $("#CountyId").empty();
+            $.ajax({
+                url:'@Url.Action("GetAllCity", "Address")',
+                data: { id: $("#CityId").val() },
+                type: 'Post',
+                dataType: 'json',
+                success: function (counties) {
+                    //alert("Test");
+                    $.each(counties, function (i, counties) {
+                        //alert("Test");
+                        $("#CountyId").append('<option value="' + counties.Value + '">' + counties.Text + '</option>');
+                    });
+                }
+            });
+
+        });
+    });
+
         Jform("#InsertAddress");
     </script>
 }
