--- a/ECommerce/ECommerce.WEB/Views/AppUser/UpdateUser.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/AppUser/UpdateUser.cshtml
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3">
-                <div class="account-sidebar"><a class="popup-btn">my account</a></div>
+                <div class="account-sidebar"><a class="popup-btn">Hesabım</a></div>
                 <div class="dashboard-left">
                     <div class="collection-mobile-back"><span class="filter-back"><i class="fa fa-angle-left" aria-hidden="true"></i> back</span></div>
                     @Html.Action("_MenuInfo", "AppUser")
