--- a/ECommerce/ECommerce.WEB/Views/AppUser/UserProfile.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/AppUser/UserProfile.cshtml
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3">
-                    <div class="account-sidebar"><a class="popup-btn">my account</a></div>
+                    <div class="account-sidebar"><a class="popup-btn">Hesabım</a></div>
                     <div class="dashboard-left">
                         <div class="collection-mobile-back"><span class="filter-back"><i class="fa fa-angle-left" aria-hidden="true"></i> back</span></div>
                         @Html.Action("_MenuInfo", "AppUser")
@@ -54,12 +54,10 @@
                                                 <h3>Adres Bilgilerim</h3><a href="@Url.Action("Index","Address")">Düzenle</a>
                                             </div>
                                             <div class="row">
-                                                @*<div class="col-sm-6">
+                                                <div class="col-sm-6">
                                                         <h6>Fatura Adresi</h6><address><br><a href="#">Edit Address</a></address>
                                                     </div>
-                                                    <div class="col-sm-6">
-                                                        <h6>Kargo Adresi</h6><address>You have not set a default shipping address.<br><a href="#">Edit Address</a></address>
-                                                    </div>*@
+                                                    
                                             </div>
                                         </div>
                                     </div>
